3/11/2015 1.0.1.2

    user visible changes, admin:
    * New command create-infomap, to create info_map.txt from a repository.
    * create-links command re-implemened new create-infomap command.
    * Indexes for Mac or Windows only are no longer created by create-links, they were never used.

28/10/2015 1.0.1.1

    user visible changes, client:
    * unwtarring is done specifically to each .wtar file. No more unwtarring whole folders.

    programmer visible changes:
    * ConfigVarStack.add_const_config_variable: added normalization of paths for windows.
    * SVNItem.walk_items_with_filter renamed SVNItem.walk_file_items_with_filter - now it only yields file items.
        It was not clear if the dirs were supposed to be filtered when looking for files and dirs.

26/10/2015 1.0.1.0

    user visible changes, client:
    * Improved unwtar, no more done files, more robust algorithm, better catching and reporting of errors
    * Interactive mode: better help for depend

23/10/2015 1.0.0.9

    user visible changes, admin:
    * New interactive command: 'apropos' searches for index items, guids and params.
    * New interactive command: 'common' lists all common needs/needed-by index items for a given list of items.

22/10/2015 1.0.0.8

    user visible changes, client:
    * Print all running processes when batch file exits on non zero

    programmer visible changes:
    * normpath for the following variables to avoid bad slashes on windows"__SITE_DATA_DIR__, __SITE_CONFIG_DIR__, __USER_DATA_DIR__, __USER_CONFIG_DIR__, __USER_HOME_DIR__

20/10/2015 1.0.0.7
    user visible changes, client:
    * Fixed const variables ending with ("_PATH", "_DIR", "_DIR_NAME", "_FILE_NAME", "_PATH__", "_DIR__", "_DIR_NAME__", "_FILE_NAME__")
        were not normalized (Win)


19/10/2015 1.0.0.6

    user visible changes, client:
    * Added check after mkdir and cd on Windows
    * Check checksum for already synced files, to overcome possible file corruption.